grafana fully integrated
